Updating bibtex keys to new system

--- a/escrito/refs.bib
+++ b/escrito/refs.bib
@@ -1,70 +1,112 @@
-@article{survey-MDP-Apps,
- ISSN = {01605682, 14769360},
- author = {D. J. White},
- journal = {The Journal of the Operational Research Society},
- number = {11},
- pages = {1073--1096},
- publisher = {Palgrave Macmillan Journals},
- title = {A Survey of Applications of Markov Decision Processes},
- volume = {44},
- year = {1993}
+@article{white1993survey,
+	title        = {A Survey of Applications of Markov Decision Processes},
+	author       = {D. J. White},
+	year         = 1993,
+	journal      = {The Journal of the Operational Research Society},
+	publisher    = {Palgrave Macmillan Journals},
+	volume       = 44,
+	number       = 11,
+	pages        = {1073--1096},
+	issn         = {01605682, 14769360}
 }
-
-@thesis{ths:RodZ,
-	title = {El misterioso caso de los modelos por compartimientos: procesos de Markov, 
-		  ecuaciones maestras y un programa para su estimación},
-	year = {2016},
-	institution = {Instituto Tecnológico de México (ITAM)},
-	location = {Ciudad de México},
-	author = {Zepeda Tello, Rodrigo},
-	pages = {163},
+@book{sutton2020reinforcement,
+	title        = {Reinforcement learning: An introduction},
+	author       = {Sutton, Richard S and Barto, Andrew G},
+	year         = 2020,
+	publisher    = {MIT press},
+	series       = {Adaptive Computation and Machine Learning},
+	isbn         = 9780262039246,
+	edition      = 2
 }
-
-@thesis{ths:DelgadoM,
-	title = {Diseño de procesos de decisión de Markov parcialmente observables para 
-		  conducción autónoma},
-	year = {2018},
-	institution = {Instituto Tecnológico de México (ITAM)},
-	location = {Ciudad de México},
-	author = {Delgado Meraz, Jorge Alfredo},
-	pages = {69},
+@misc{silver2015lectures,
+	title        = {Lectures on Reinforcement Learning},
+	author       = {Silver, David},
+	year         = 2015,
+	howpublished = {\textsc{url:}~\url {https://www.davidsilver.uk/teaching/}}
 }
-
-@book{SuttonBarto,
-  title={Reinforcement learning: An introduction},
-  author={Sutton, Richard S and Barto, Andrew G},
-  year={2020},
-  publisher={MIT press},
-  series={Adaptive Computation and Machine Learning},
-  edition={2},
-  isbn={9780262039246},
-}
-
-@Misc{silver2015,
-	author = {David Silver},
-	title = {Lectures on Reinforcement Learning},
-	howpublished = {\textsc{url:}~\url
-{https://www.davidsilver.uk/teaching/}},
-	year = {2015}
-}
-
 @misc{silver2017mastering,
-      title={Mastering Chess and Shogi by Self-Play with a General Reinforcement Learning Algorithm}, 
-      author={David Silver and Thomas Hubert and Julian Schrittwieser and Ioannis Antonoglou and Matthew Lai and Arthur Guez and Marc Lanctot and Laurent Sifre and Dharshan Kumaran and Thore Graepel and Timothy Lillicrap and Karen Simonyan and Demis Hassabis},
-      year={2017},
-      eprint={1712.01815},
-      archivePrefix={arXiv},
-      primaryClass={cs.AI}
+	title        = {Mastering Chess and Shogi by Self-Play with a General Reinforcement Learning Algorithm},
+	author       = {Silver, David and Hubert, Thomas  and Schrittwieser, Julian  and Antonoglou, Ioannis  and Lai, Matthew  and Guez, Arthur  and Lanctot, Marc and Sifre, Laurent and Kumaran, Dharshan and Graepel, Thore  and Lillicrap, Timothy  and Simonyan, Karen  and Hassabis, Demis},
+	year         = 2017,
+	doi          = {https://doi.org/10.1038/nature16961},
+	eprint       = {1712.01815},
+	archiveprefix = {arXiv},
+	primaryclass = {cs.AI}
+}
+@article{silver2018chess,
+	title        = {A general reinforcement learning algorithm that masters chess, shogi, and Go through self-play},
+	author       = {Silver, David and Hubert, Thomas  and Schrittwieser, Julian  and Antonoglou, Ioannis  and Lai, Matthew  and Guez, Arthur  and Lanctot, Marc and Sifre, Laurent and Kumaran, Dharshan and Graepel, Thore  and Lillicrap, Timothy  and Simonyan, Karen  and Hassabis, Demis},
+	year         = 2018,
+	journal      = {Science},
+	volume       = 362,
+	number       = 6419,
+	pages        = {1140--1144},
+	doi          = {10.1126/science.aar6404},
+	url          = {https://www.science.org/doi/abs/10.1126/science.aar6404}
+}
+@article{farias2003LP2ADP,
+	title        = {The Linear Programming Approach to Approximate Dynamic Programming},
+	author       = {given={Daniela Pucci}, prefix={De}, family={Farias} and Van Roy, Benjamin},
+	year         = 2003,
+	journal      = {Operations Research},
+	publisher    = {INFORMS},
+	volume       = 51,
+	number       = 6,
+	pages        = {850--865},
+	issn         = {0030364X, 15265463}
+}
+@phdthesis{farias2002thesis,
+	title        = {The Linear Programming Approach to Approximate Dynamic Programming: Theory and Application},
+	author       = {given={Daniela Pucci}, prefix={De}, family={Farias}},
+	month        = 5,
+	date         = 2002,
+	institution  = {Stanford University}
+}
+@misc{kolter2014lecture,
+	title        = {Lecture notes for 15-780: Graduate Artificial Intelligence},
+	author       = {Kolter, Ziko J. and Rubinstein, Zachary},
+	year         = 2014,
+	url          = {http://www.cs.cmu.edu/~zkolter/course/15-780-s14/index.html},
+	organization = {Carnegie Mellon University: Department of Computer Science}
+}
+@misc{farias2004lecture,
+	title        = {Lecture notes for Decision Making in Large Scale Systems},
+	author       = {given={Daniela Pucci}, prefix={De}, family={Farias}},
+	year         = 2004,
+	url          = {https://ocw.mit.edu/courses/mechanical-engineering/2-997-decision-making-in-large-scale-systems-spring-2004/index.htm#},
+	organization = {Massachusetts Institute of Technology: MIT OpenCourseWare}
+}
+@article{borkar2002Convex,
+	title        = {Convex Analytic Methods in Markov Decision Processes},
+	author       = {Borkar, Vivek},
+	year         = 2002,
+	month        = {01},
+	journal      = {Handbook of Markov Decision Processes},
+	doi          = {10.1007/978-1-4615-0805-2_11}
+}
+@article{hordijk1979LP4MDP,
+	title        = {Linear Programming and Markov Decision Chains},
+	author       = {A. Hordijk and L. C. M. Kallenberg},
+	year         = 1979,
+	journal      = {Management Science},
+	publisher    = {INFORMS},
+	volume       = 25,
+	number       = 4,
+	pages        = {352--362},
+	issn         = {00251909, 15265501},
+	url          = {http://www.jstor.org/stable/2630339}
 }
 
-@article{silverchess,
-author = {David Silver  and Thomas Hubert  and Julian Schrittwieser  and Ioannis Antonoglou  and Matthew Lai  and Arthur Guez  and Marc Lanctot  and Laurent Sifre  and Dharshan Kumaran  and Thore Graepel  and Timothy Lillicrap  and Karen Simonyan  and Demis Hassabis },
-title = {A general reinforcement learning algorithm that masters chess, shogi, and Go through self-play},
-journal = {Science},
-volume = {362},
-number = {6419},
-pages = {1140-1144},
-year = {2018},
-doi = {10.1126/science.aar6404},
-URL = {https://www.science.org/doi/abs/10.1126/science.aar6404},
+@article{schweitzer1985generalized,
+title = {Generalized polynomial approximations in Markovian decision processes},
+journal = {Journal of Mathematical Analysis and Applications},
+volume = {110},
+number = {2},
+pages = {568-582},
+year = {1985},
+issn = {0022-247X},
+doi = {https://doi.org/10.1016/0022-247X(85)90317-8},
+url = {https://www.sciencedirect.com/science/article/pii/0022247X85903178},
+author = {Schweitzer, Paul J. and Seidmann, Abraham},
 }
+
