Resolviendo prosa. Faltan diagramas finales

--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -36,7 +36,9 @@
 \usepackage{sty/thesis-package}
 
 \author{Alonso Martinez Cisneros}
-\title{Working Title}
+\title{Approaching the Reinforcement Learning Problem via 
+Approximate Dynamic Programming: formulation and applications 
+to...}
 \date{2021}
 
 \begin{document}
