--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -36,8 +36,8 @@
 \usepackage{sty/thesis-package}
 
 \author{Alonso Martinez Cisneros}
-\title{Approaching the Reinforcement Learning Problem via 
-Approximate Dynamic Programming: formulation and applications 
+\title{Approximate solutions to the Reinforcement Learning 
+Problem via Linear Programming: Formulation with applications 
 to...}
 \date{2021}
 
