Typo fixes + graph improvements + gitinfo fixes

--- a/escrito/sty/thesis-package.sty
+++ b/escrito/sty/thesis-package.sty
@@ -17,8 +17,8 @@
 % \definecolor{lightRed}{RGB}{191, 97, 106}
 
 % Custom colors
-\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
-\definecolor{backcolour}{RGB}{229, 229, 229}
+% \definecolor{backcolour}{RGB}{229, 229, 229}
+\definecolor{backcolour}{RGB}{229,233,240}
 % Polar Night Palette
 \definecolor{nightDarkest}{RGB}{46, 52, 64}
 \definecolor{nightDark}{RGB}{59, 66, 82}
