--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -83,6 +83,11 @@ to...}
 \chapter{Optimization Theory}
 \chapter{Reinforcement Learning}
 
+\appendix
+
+\chapter{Simulating Miniopoly}
+\include{Chapters/MiniopolySim}
+
 \nocite{*}
 \printbibliography
 
