--- a/escrito/sty/thesis-package.sty
+++ b/escrito/sty/thesis-package.sty
@@ -56,22 +56,24 @@
 \pgfkeys{/pgf/number format/1000 sep={}}
 
 % JuliaMono font
-\newfontfamily\JuliaMono{JuliaMono}
+\newfontfamily\JuliaMono{JuliaMono}[Scale=0.75]
 
 % Language definitions and listings
 \lstdefinelanguage{julia}{
-		morekeywords= [0]{function, if, end, elseif, @constraint, return, module, 
-		export, using, =, copy, issparse, Matrix, isposdef, inv, 
-		zeros, size, findall, findmin, ones, else, length, I, trues,
-        isfinite., abs., abs, eps, Float64, julia>, julia, println, Bool, rand,
-		prinln, round, pkg},
+		morekeywords= [0]{function, if, end, elseif, 
+		@constraint, return, module, export, using, =, copy, 
+		issparse, Matrix, isposdef, inv, zeros, size, findall, 
+		findmin, ones, else, length, I, trues, isfinite., abs., 
+		abs, eps, Float64, julia>, julia, println, Bool, rand, 
+		prinln, round, pkg, mutable, struct, Int, Dict, Tuple, 
+	Union, Nothing, Int8, UInt},
         morekeywords = [1]{1,2,3,40},
 		sensitive=false,
 		morestring=[s]{"}{"},
 		morecomment=[l]\#,
 		morecomment=[s]{"""}{"""},
-		otherkeywords={*, +, -, \\, ', :, .==, .<=, ./, .>, .!, .=, 
-		.^, .-,.,;},
+		otherkeywords={*, +, -, \\, ', :, .==, .<=, ./, .>, .!, 
+		.=, .^, .-,.,;, @info, @assert},
 	}
 \lstset{language=julia,
 		basicstyle={\JuliaMono\small \color{nightDarkest}},
