Better defining the outline

--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -37,8 +37,8 @@
 
 \author{Alonso Martinez Cisneros}
 \title{Approximate solutions to the Reinforcement Learning 
-Problem via Linear Programming: Formulation with applications 
-to...}
+Problem via Linear Programming; with applications to Supervised 
+Machine Learning.}
 \date{2021}
 
 \begin{document}
@@ -82,6 +82,12 @@ to...}
 \chapter{Stochastic Processes \& Markov Decision Processes}
 \chapter{Optimization Theory}
 \chapter{Reinforcement Learning}
+
+\part{Approximate solutions to the Reinforcement Learning 
+Problem}
+
+
+\part{Applications to Supervised Machine Learning}
 
 \appendix
 
