--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -36,7 +36,9 @@
 \usepackage{sty/thesis-package}
 
 \author{Alonso Martinez Cisneros}
-\title{Working Title}
+\title{Approximate solutions to the Reinforcement Learning 
+Problem via Linear Programming; with applications to Supervised 
+Machine Learning.}
 \date{2021}
 
 \begin{document}
@@ -79,7 +81,20 @@
 \chapter{Probability Theory}
 \chapter{Stochastic Processes \& Markov Decision Processes}
 \chapter{Optimization Theory}
+
 \chapter{Reinforcement Learning}
+\include{Chapters/ReinforcementLearning}
+
+\part{Approximate solutions to the Reinforcement Learning 
+Problem}
+
+
+\part{Applications to Supervised Machine Learning}
+
+\appendix
+
+\chapter{Simulating Miniopoly}
+\include{Chapters/MiniopolySim}
 
 \nocite{*}
 \printbibliography
