--- a/escrito/FrontBackMatter/Acknowledgments.tex
+++ b/escrito/FrontBackMatter/Acknowledgments.tex
@@ -23,6 +23,13 @@
 \chapter*{Acknowledgments}
 Put your acknowledgments here.
 
+To acknowledge:
+- Gente
+- Julia
+- Style of the book inspired by Tufte and Open Logic Project
+- Color theme Nord by
+- Open source projects
+
 \bigskip
 
 Another paragraph
