Medio escribiendo un cacho

--- a/escrito/sty/thesis-package.sty
+++ b/escrito/sty/thesis-package.sty
@@ -116,6 +116,9 @@
 \newcommand{\E}{\mathbb{E}\brackets}
 \newcommand{\Pe}{\mathbb{P}\brackets}
 \newcommand{\vertsep}{\,\middle\vert\,} % Growable vertical bar with spacing
+\newcommand{\States}{\mathcal{S}}
+\newcommand{\Actions}{\mathcal{A}}
+\newcommand{\Rewards}{\mathcal{R}}
 
 %%===========================%
 %% Theorem-like Environments %
