--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -79,7 +79,10 @@ Machine Learning.}
 \include{Chapters/Motivation}
 
 \chapter{Probability Theory}
+
 \chapter{Stochastic Processes \& Markov Decision Processes}
+\include{Chapters/Stochastic}
+
 \chapter{Optimization Theory}
 
 \chapter{Reinforcement Learning}
