Stashing para arreglas correciones de Andreas

--- a/escrito/refs.bib
+++ b/escrito/refs.bib
@@ -68,3 +68,23 @@ year = {2018},
 doi = {10.1126/science.aar6404},
 URL = {https://www.science.org/doi/abs/10.1126/science.aar6404},
 }
+
+@article{farias2003LP2ADP,
+	title        = {The Linear Programming Approach to Approximate Dynamic Programming},
+	author       = {given={Daniela Pucci}, prefix={De}, family={Farias} and Van Roy, Benjamin},
+	year         = 2003,
+	journal      = {Operations Research},
+	publisher    = {INFORMS},
+	volume       = 51,
+	number       = 6,
+	pages        = {850--865},
+	issn         = {0030364X, 15265463}
+}
+
+@phdthesis{farias2002thesis,
+	title        = {The Linear Programming Approach to Approximate Dynamic Programming: Theory and Application},
+	author       = {given={Daniela Pucci}, prefix={De}, family={Farias}},
+	month        = 5,
+	date         = 2002,
+	institution  = {Stanford University}
+}
