--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -30,7 +30,7 @@
     style=alphabetic,
     maxcitenames=2,
     ]{biblatex}
-\addbibresource{refs.bib}
+\addbibresource{BachelorsThesis.bib}
 
 % Paquete custom
 \usepackage{sty/thesis-package}
@@ -69,39 +69,30 @@ Machine Learning.}
 
 % \input{Chapters/printTest.tex}
 \chapter*{Introduction}
-
-
-\include{Chapters/0-Intro}
+% \include{Chapters/0-Intro}
 
 \part{Foundations}
 
 \chapter{Setting the stage}
-\include{Chapters/Motivation}
+% \include{Chapters/Motivation}
 
 \chapter{Probability Theory}
 
 \chapter{Stochastic Processes \& Markov Decision Processes}
-\include{Chapters/Stochastic}
+% \include{Chapters/Stochastic}
 
 \chapter{Optimization Theory}
 
 \chapter{Reinforcement Learning}
-\include{Chapters/ReinforcementLearning}
+% \include{Chapters/ReinforcementLearning}
 
 \part{Approximate solutions to the Reinforcement Learning 
 Problem}
 
+\chapter{Approximate Linear Programming}
+\include{Chapters/ApproximateLinearP}
 
-\part{Applications to Supervised Machine Learning}
-
-\appendix
-
-\chapter{Simulating Miniopoly}
-\include{Chapters/MiniopolySim}
-
-\part{Approximate solutions to the Reinforcement Learning 
-Problem}
-
+%% Aqui todos los resultados de Farias que menciona LPinRL.
 
 \part{Applications to Supervised Machine Learning}
 
