--- a/escrito/FrontBackMatter/Dedication.tex
+++ b/escrito/FrontBackMatter/Dedication.tex
@@ -1,9 +1,4 @@
-%*******************************************************
-% Dedication
-%*******************************************************
-\thispagestyle{empty}
-\phantomsection
-\pdfbookmark[1]{Dedication}{Dedication}
+\addcontentsline{toc}{chapter}{Dedication}
 
 \vspace*{3cm}
 
