--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -39,7 +39,7 @@
 \title{Approximate solutions to the Reinforcement Learning 
 Problem via Linear Programming; with applications to Supervised 
 Machine Learning.}
-\date{2021}
+\date{2022}
 
 \begin{document}
 
@@ -50,13 +50,13 @@ Machine Learning.}
 
 % Something
 \cleardoublepage
-\pagestyle{plain}
-\pagenumbering{arabic}
+% \pagestyle{plain}
+% \pagenumbering{arabic}
 
-\include{FrontBackmatter/Dedication}
-\include{FrontBackmatter/Acknowledgments}
-\include{FrontBackmatter/Abstract}
-\include{FrontBackmatter/Foreword}
+\include{FrontBackMatter/Dedication}
+\include{FrontBackMatter/Acknowledgments}
+\include{FrontBackMatter/Abstract}
+% \include{FrontBackmatter/Foreword}
 % Foreword perhaps...
 
 \tableofcontents
