--- a/escrito/sty/itam-thesis.cls
+++ b/escrito/sty/itam-thesis.cls
@@ -46,6 +46,7 @@
 		\RequirePackage{hyperref}
 		\RequirePackage{mathtools}
 		\RequirePackage{amsthm}
+		\RequirePackage{framed} % Shaded box
 		% \RequirePackage{mdframed}
 
 		% % load ntheorem before newtxmath to avoid multiple definition of \openbox
