Fixing up acknowledgements

--- a/escrito/FrontBackMatter/Acknowledgments.tex
+++ b/escrito/FrontBackMatter/Acknowledgments.tex
@@ -25,5 +25,7 @@
 
     \bigskip
 
-    Another paragraph
+    Special thanks Arnaud Joly, core developer emeritus of the scikit-learn
+    library, for his assitance in implementing the CART algorithm; and Prof.
+    Ashwin Rao from Stanford University for pointing me in the right direction.
 }
