Avances en ch ReinforcementLearning

--- a/escrito/BachelorsThesis.bib
+++ b/escrito/BachelorsThesis.bib
@@ -116,11 +116,14 @@
   keywords = {data mining,inference,R,R software,statistical learning,supervised learning,unsupervised learning}
 }
 
-@article{moisescu-pareja,
-  title = {Lecture 2: {{Bellman}} Operator, {{Banach}}'s Fixed Point, Solving {{MDPs}} - {{SUMS}} 707 - {{Basic Reinforcement Learning}}},
-  author = {Moisescu-Pareja, Gabriela and Nguyen, Viet},
-  pages = {53},
-  langid = {english}
+@thesis{louppe2014,
+  type = {phdthesis},
+  title = {Understanding Random Forests: {{From}} Theory to Practice},
+  author = {Louppe, Gilles},
+  date = {2014-10},
+  institution = {{University of Liege, Belgium}},
+  url = {https://github.com/glouppe/phd-thesis},
+  pagetotal = {225}
 }
 
 @article{moisescu-parejaa,
@@ -159,13 +162,6 @@
   author = {Rao, Ashwin and Jelvis, Tikhon},
   date = {2022},
   publisher = {{Stanford University}},
-  langid = {english}
-}
-
-@article{raoRL4F,
-  title = {Foundations of {{Reinforcement Learning}} with {{Applications}} in {{Finance}}},
-  author = {Rao, Ashwin and Jelvis, Tikhon},
-  pages = {534},
   langid = {english}
 }
 
