--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -84,15 +84,15 @@ Machine Learning.}
 \chapter{Optimization Theory}
 
 \chapter{Reinforcement Learning}
-% \include{Chapters/ReinforcementLearning}
+\include{Chapters/ReinforcementLearning}
 
 \part{Approximate solutions to the Reinforcement Learning 
 Problem}
 
 \chapter{Approximate Linear Programming}
-\include{Chapters/ApproximateLinearP}
+% \include{Chapters/ApproximateLinearP}
 
-%% Aqui todos los resultados de Farias que menciona LPinRL.
+% Aqui todos los resultados de Farias que menciona LPinRL.
 
 \part{Applications to Supervised Machine Learning}
 
