Acabado primer draft Ch ReinforcementLearning

--- a/escrito/BachelorsThesis.bib
+++ b/escrito/BachelorsThesis.bib
@@ -157,7 +157,7 @@
   keywords = {Mathematics / General,Mathematics / Probability & Statistics / General,Mathematics / Probability & Statistics / Stochastic Processes}
 }
 
-@misc{rao2022,
+@misc{raoRL4F,
   title = {Foundations of {{Reinforcement Learning}} with {{Applications}} in {{Finance}}},
   author = {Rao, Ashwin and Jelvis, Tikhon},
   date = {2022},
