--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -66,6 +66,8 @@ Machine Learning.}
 %====================================================%
 % Start of the content proper ---------------------- %
 %====================================================%
+\pagestyle{plain}
+\pagenumbering{arabic}
 
 % \input{Chapters/printTest.tex}
 \chapter*{Introduction}
