--- a/escrito/sty/thesis-package.sty
+++ b/escrito/sty/thesis-package.sty
@@ -116,7 +116,7 @@
 
 %% Commands
 \newcommand{\R}{\mathbb{R}}
-\newcommand{\E}{\mathbb{E}\brackets}
+\newcommand{\E}[1]{\mathbb{E}\left[#1\right]}
 % \newcommand{\IP}{\mathbb{P}\brackets}
 \providecommand{\IP}[1]{\mathbb{P}\left[#1\right]}
 \newcommand{\vertsep}{\,\middle\vert\,} % Growable vertical bar with spacing
