--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -30,7 +30,7 @@
     style=alphabetic,
     maxcitenames=2,
     ]{biblatex}
-\addbibresource{refs.bib}
+\addbibresource{BachelorsThesis.bib}
 
 % Paquete custom
 \usepackage{sty/thesis-package}
@@ -39,7 +39,7 @@
 \title{Approximate solutions to the Reinforcement Learning 
 Problem via Linear Programming; with applications to Supervised 
 Machine Learning.}
-\date{2021}
+\date{2022}
 
 \begin{document}
 
@@ -50,51 +50,66 @@ Machine Learning.}
 
 % Something
 \cleardoublepage
-\pagestyle{plain}
-\pagenumbering{arabic}
+% \pagestyle{plain}
+% \pagenumbering{arabic}
 
-\include{FrontBackmatter/Dedication}
-\include{FrontBackmatter/Acknowledgments}
-\include{FrontBackmatter/Abstract}
-\include{FrontBackmatter/Foreword}
+\include{FrontBackMatter/Dedication} \cleardoublepage
+\include{FrontBackMatter/Acknowledgments} \cleardoublepage
+\include{FrontBackMatter/Abstract} \cleardoublepage
+% \include{FrontBackmatter/Foreword}
 % Foreword perhaps...
 
 \tableofcontents
+\cleardoublepage
 
 \mainmatter
 
 %====================================================%
 % Start of the content proper ---------------------- %
 %====================================================%
+\pagestyle{plain}
+\pagenumbering{arabic}
 
 % \input{Chapters/printTest.tex}
 \chapter*{Introduction}
-
-
 \include{Chapters/0-Intro}
 
 \part{Foundations}
 
-\chapter{Setting the stage}
-\include{Chapters/Motivation}
+	\chapter{Setting the stage}
+	\include{Chapters/Motivation}
 
-\chapter{Probability Theory}
-\chapter{Stochastic Processes \& Markov Decision Processes}
-\chapter{Optimization Theory}
-\chapter{Reinforcement Learning}
+	\chapter{Probability Theory}
 
+	\chapter{Stochastic Processes \& Markov Decision Processes}
+	\include{Chapters/Stochastic}
+
+	\chapter{Optimization Theory}
+
+	\chapter{Supervised Machine Learning}
+	\include{Chapters/SupervisedLearning}
+
+	\chapter{Reinforcement Learning}
+	\include{Chapters/ReinforcementLearning}
+
+\cleardoublepage
 \part{Approximate solutions to the Reinforcement Learning 
 Problem}
 
+	\chapter{Approximate Linear Programming}
+	\include{Chapters/ApproximateLinearP}
 
+% Aqui todos los resultados de Farias que menciona LPinRL.
+
+\cleardoublepage
 \part{Applications to Supervised Machine Learning}
+	\appendix
 
-\appendix
-
-\chapter{Simulating Miniopoly}
-\include{Chapters/MiniopolySim}
+	\chapter{Simulating Miniopoly}
+	\include{Chapters/MiniopolySim}
 
 \nocite{*}
+\cleardoublepage
 \printbibliography
 
 \end{document}
