--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -19,7 +19,6 @@
 \usetikzlibrary{backgrounds, intersections, fillbetween}
 % \usetikzlibrary{external}
 % \tikzexternalize[prefix=tikz/]
-
 \usepackage{import}
 
 % Bibliografía
@@ -60,6 +59,7 @@ Machine Learning.}
 % Foreword perhaps...
 
 \tableofcontents
+\listofalgorithms
 \cleardoublepage
 
 \mainmatter
@@ -77,12 +77,12 @@ Machine Learning.}
 \part{Foundations}
 
 	\chapter{Setting the stage}
-	\include{Chapters/Motivation}
+	% \include{Chapters/Motivation}
 
 	\chapter{Probability Theory}
 
 	\chapter{Stochastic Processes \& Markov Decision Processes}
-	\include{Chapters/Stochastic}
+	% \include{Chapters/Stochastic}
 
 	\chapter{Optimization Theory}
 
@@ -90,14 +90,14 @@ Machine Learning.}
 	\include{Chapters/SupervisedLearning}
 
 	\chapter{Reinforcement Learning}
-	\include{Chapters/ReinforcementLearning}
+	% \include{Chapters/ReinforcementLearning}
 
 \cleardoublepage
 \part{Approximate solutions to the Reinforcement Learning 
 Problem}
 
 	\chapter{Approximate Linear Programming}
-	\include{Chapters/ApproximateLinearP}
+	% \include{Chapters/ApproximateLinearP}
 
 % Aqui todos los resultados de Farias que menciona LPinRL.
 
@@ -106,7 +106,7 @@ Problem}
 	\appendix
 
 	\chapter{Simulating Miniopoly}
-	\include{Chapters/MiniopolySim}
+	% \include{Chapters/MiniopolySim}
 
 \nocite{*}
 \cleardoublepage
