--- a/escrito/sty/thesis-package.sty
+++ b/escrito/sty/thesis-package.sty
@@ -40,6 +40,10 @@
 \definecolor{auroraYellow}{RGB}{235, 203, 139}
 \definecolor{auroraGreen}{RGB}{163, 190, 140}
 
+% Allow breakable theorem boxes from tcolorbox
+\tcbuselibrary{breakable, theorems}
+\tcbset{breakable}
+
 % Hyperref setup
 \hypersetup{
 	colorlinks=true,
@@ -96,6 +100,13 @@
         escapeinside={{~}{~}},
 	}
 
+% Algorithm2e configs
+\SetKwProg{Function}{function}{}{end}
+\DontPrintSemicolon
+\LinesNumbered
+\setlength{\algomargin}{0.7ex}
+% \PassOptionsToPackage{ruled, algosection}{algorithm2e}
+\SetAlgoCaptionLayout{centerline}
 
 %=================================================%
 % Math Operators, Delimiters & Math-mode commands %
@@ -110,12 +121,16 @@
 %% Operators
 \DeclareMathOperator*{\argmax}{arg\,max}
 \DeclareMathOperator*{\argmin}{arg\,min}
+\DeclareMathOperator*{\Err}{Err}
 
 %% Commands
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\E}{\mathbb{E}\brackets}
 \newcommand{\Pe}{\mathbb{P}\brackets}
 \newcommand{\vertsep}{\,\middle\vert\,} % Growable vertical bar with spacing
+\renewcommand{\L}{\mathcal{L}}
+\newcommand{\1}{\mathds{1}}
+\let\vec\mathbf
 
 %%===========================%
 %% Theorem-like Environments %
@@ -137,6 +152,23 @@
 			colback=frostMidBlue % Title box inner color
 			}
 	}{thm}
+
+% Theorem
+\newtcbtheorem[number within=chapter]{dfn}{Definition}%
+	{
+		colback=white, % Inside color of content box
+		colframe=frostMidBlue, % Outer box frame color
+		fonttitle=\bfseries\scshape, % font title style
+		enhanced,
+		coltitle=snowLight, % Title font color
+		attach boxed title to top left={
+			xshift=2ex,yshift=-2mm,yshifttext=-1mm
+			},
+		boxed title style={ % Title box
+			colframe=frostMidBlue, % Title box outer frame color
+			colback=frostMidBlue % Title box inner color
+			}
+	}{dfn}
 
 % Corollary
 \newtcbtheorem[number within=chapter]{coro}{Corollary}%
