--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -77,12 +77,12 @@ Machine Learning.}
 \part{Foundations}
 
 	\chapter{Setting the stage}
-	% \include{Chapters/Motivation}
+	\include{Chapters/Motivation}
 
 	\chapter{Probability Theory}
 
 	\chapter{Stochastic Processes \& Markov Decision Processes}
-	% \include{Chapters/Stochastic}
+	\include{Chapters/Stochastic}
 
 	\chapter{Optimization Theory}
 
@@ -90,7 +90,7 @@ Machine Learning.}
 	\include{Chapters/SupervisedLearning}
 
 	\chapter{Reinforcement Learning}
-	% \include{Chapters/ReinforcementLearning}
+	\include{Chapters/ReinforcementLearning}
 
 \cleardoublepage
 \part{Approximate solutions to the Reinforcement Learning 
@@ -106,7 +106,7 @@ Problem}
 	\appendix
 
 	\chapter{Simulating Miniopoly}
-	% \include{Chapters/MiniopolySim}
+	\include{Chapters/MiniopolySim}
 
 \nocite{*}
 \cleardoublepage
