Capitulo resultados de farias hasta sec 4

--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -72,25 +72,25 @@ Machine Learning.}
 
 % \input{Chapters/printTest.tex}
 \chapter*{Introduction}
-\include{Chapters/0-Intro}
+% \include{Chapters/0-Intro}
 
 \part{Foundations}
 
 	\chapter{Setting the stage}
-	\include{Chapters/Motivation}
+	% \include{Chapters/Motivation}
 
 	\chapter{Probability Theory}
 
 	\chapter{Stochastic Processes \& Markov Decision Processes}
-	\include{Chapters/Stochastic}
+	% \include{Chapters/Stochastic}
 
 	\chapter{Optimization Theory}
 
 	\chapter{Supervised Machine Learning}
-	\include{Chapters/SupervisedLearning}
+	% \include{Chapters/SupervisedLearning}
 
 	\chapter{Reinforcement Learning}
-	\include{Chapters/ReinforcementLearning}
+	% \include{Chapters/ReinforcementLearning}
 
 \cleardoublepage
 \part{Approximate solutions to the Reinforcement Learning 
@@ -99,6 +99,9 @@ Problem}
 	\chapter{Approximate Linear Programming}
 	\include{Chapters/ApproximateLinearP}
 
+	\chapter{Properties and performance guarantees}
+	\include{Chapters/PropertiesGuarantees}
+
 % Aqui todos los resultados de Farias que menciona LPinRL.
 
 \cleardoublepage
@@ -106,7 +109,7 @@ Problem}
 	\appendix
 
 	\chapter{Simulating Miniopoly}
-	\include{Chapters/MiniopolySim}
+	% \include{Chapters/MiniopolySim}
 
 \nocite{*}
 \cleardoublepage
