--- a/escrito/sty/thesis-package.sty
+++ b/escrito/sty/thesis-package.sty
@@ -125,7 +125,8 @@
 
 %% Commands
 \newcommand{\R}{\mathbb{R}}
-\newcommand{\E}[1]{\mathbb{E}\left[#1\right]}
+% \newcommand{\E}[1]{\mathbb{E}\left[#1\right]}
+\newcommand{\E}{\mathbb{E}}
 % \newcommand{\IP}{\mathbb{P}\brackets}
 \providecommand{\IP}[1]{\mathbb{P}\left[#1\right]}
 \newcommand{\vertsep}{\,\middle\vert\,} % Growable vertical bar with spacing
